<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/alarmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/alarmTime"
        android:layout_toEndOf="@+id/alarmTime"
        android:padding="8dp"
        android:textSize="@dimen/text_medium"
        tools:text="Alarm Name" />

    <TextView
        android:id="@+id/alarmTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        tools:text="20:54" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dayToggle-Mon"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_monday" />

        <Button
            android:id="@+id/dayToggle-Tue"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_tuesday" />

        <Button
            android:id="@+id/dayToggle-Wed"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_wednesday" />

        <Button
            android:id="@+id/dayToggle-Thu"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_thursday" />

        <Button
            android:id="@+id/dayToggle-Fri"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_friday" />

        <Button
            android:id="@+id/dayToggle-Sat"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_saturday" />

        <Button
            android:id="@+id/dayToggle-Sun"
            style="@android:style/Widget.Material.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_day"
            android:layout_weight="1"
            android:text="@string/initial_sunday" />

    </LinearLayout>

</RelativeLayout>